--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,11 @@
 {
-  "files": [],
   "references": [],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": [
+        "./src/*"
+      ]
     }
   }
 }
